syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

message Todo {
    int64 todo_id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp reminder = 4;
}

message CreateRequest {
    string api = 1;
    Todo Todo = 2;
}

message CreateResponse {
    string api = 1;
    int64 id = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;
    repeated Todo Todos = 2;
}

service TodoService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}